# python-web-scraper

./: .gitignore  README.md  pyproject.toml
src/web_scraper/: __init__.py  fetch.py  html_handler.py  html_scraper.py  main.py
tests/: test_html_scraper.py
