[project]
name = "python-web-scraper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pytest>=8.2.2",
    "requests>=2.32.3",
    "pandas>=2.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
